--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <link rel="stylesheet" href="../css/styles.css" />
   <style>
-    /* Ajusta as imagens para não invadir o aside */
     .card-img-top {
       object-fit: cover; /* Mantém proporção da imagem */
       height: 250px;     /* Altura fixa para todas */
@@ -134,7 +133,7 @@
             </div>
           </div>
         </aside>
-      </div> <!-- Fecha row do artigo -->
+      </div> 
     </article>
 
     
