--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -38,7 +38,7 @@
             <div class="col-lg-8">
                 <h1 class="display-4 mb-4">Entre em Contato</h1>
 
-                <!-- Rastreador do governo -->
+                <!-- Rastreador -->
                 <form class="mb-5">
                     <div class="row">
                         <div class="col-md-6 mb-3">
