--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <i class="fas fa-wine-bottle me-2"></i> PARREIRAL
           </a>
 
-          <!-- Botão hamburguer pedro -->
+          <!-- Botão hamburguer  -->
           <button
             class="navbar-toggler"
             type="button"
