Update não sei mais qual

--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -217,9 +217,9 @@
     <div class="col-md-4">
       <h5>SIGA-NOS</h5>
       <nav>
-        <a href="#"><i class="fab fa-facebook"></i> Facebook</a><br>
-        <a href="#"><i class="fab fa-instagram"></i> Instagram</a><br>
-        <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
+        <a href="#"><i class="fab fa-facebook"></i> ParreiralBrasil</a><br>
+        <a href="#"><i class="fab fa-instagram"></i> parreiraloficial</a><br>
+        
       </nav>
     </div>
   </div>
