--- a/paginas/diversos.html
+++ b/paginas/diversos.html
@@ -217,7 +217,7 @@
     <div class="col-md-4">
       <h5>SIGA-NOS</h5>
       <nav>
-        <a href="#"><i class="fab fa-facebook"></i> ParreiralBrasil</a><br>
+        <a href="#"><i class="fab fa-facebook"></i> Parreiralb</a><br>
         <a href="#"><i class="fab fa-instagram"></i> parreiraloficial</a><br>
         
       </nav>
