--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parreiral - Vinhedos e Eventos</title>
-<link rel="shortcut icon" type="imagex/png" href="../img/sus.ico">
+    <link rel="icon" type="imagex/png" href="../img/sus.ico" />
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -49,7 +49,9 @@
             <div class="navbar-nav ms-auto">
               <a class="nav-link active" href="index.html">Home</a>
               <a class="nav-link" href="./paginas/sobre.html">Sobre Nós</a>
-              <a class="nav-link" href="./paginas/diversos.html">Eventos e Visitações</a>
+              <a class="nav-link" href="./paginas/diversos.html"
+                >Eventos e Visitações</a
+              >
               <a class="nav-link" href="./paginas/contato.html">Contato</a>
             </div>
           </div>
@@ -64,8 +66,8 @@
           <div class="tutor-meta mb-4 p-3 bg-light rounded">
             <small>
               <i class="fas fa-user me-2 text-wine"></i>Publicado por: Vinícola
-              Parreiral |
-              <i class="fas fa-calendar me-2 text-wine"></i>Data: 20/03/2024
+              Parreiral | <i class="fas fa-calendar me-2 text-wine"></i>Data:
+              20/03/2024
             </small>
           </div>
 
@@ -247,7 +249,8 @@
           <div class="col-md-4">
             <h5>SIGA-NOS</h5>
             <nav>
-              <a href="#"><i class="fab fa-facebook"></i> ParreiralBrasil</a><br />
+              <a href="#"><i class="fab fa-facebook"></i> ParreiralBrasil</a
+              ><br />
               <a href="#"><i class="fab fa-instagram"></i> parreiraloficial</a>
             </nav>
           </div>
