--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="../css/styles.css" />
   <style>
     .card-img-top {
-      object-fit: cover; /* Mantém proporção da imagem */
-      height: 250px;     /* Altura fixa para todas */
+      object-fit: cover; /
+      height: 250px;     
     }
   </style>
 </head>
