Update FINAL DE CERTEZA ACABOUUUUUUUU

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
             </small>
           </div>
 
-          <h1 class="display-5 mb-4">
+          <h1 class="display-5 mb-4" id="titulo">
             Bem-vindo ao Parreiral - Tradição em Cada Garrafa
           </h1>
 
-          <p class="lead mb-4">
+          <!--<p class="lead mb-4">
             Há mais de 50 anos cultivando excelência em nossos vinhedos e
             produzindo os melhores derivados da uva para você.
           </p>
@@ -92,7 +92,7 @@
               beneficiam-se de condições climáticas ideais para o cultivo de
               uvas especiais, garantindo qualidade superior em cada produto.
             </p>
-          </div>
+          </div>-->
 
           <!-- CAROUSEL -->
           <section class="mb-5">
